SERVER-41001 mongos map reduce cleaup aborts on first command failure